--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
@@ -45,7 +45,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
 
-    <!--<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
 
 </body>
