--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <script src="scripts/directives/foldable.js"></script>
         <!-- endbuild -->
 </head>
   <body ng-app="circledistributionApp">
@@ -26,6 +27,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <a href="https://github.com/deddu/showmethedom"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="container" ng-view=""></div>
 
 
@@ -44,6 +46,7 @@
     <script src="bower_components/angular/angular.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/foldable.js"></script>
 
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
